<resources>
    <string name="app_name">Foreverfind</string>
    <string name="txtItemf">Flowers</string>
    <string name="txtItemcak">Cakes</string>
    <string name="txtItemcho">Chocolates</string>
    <string name="txt_ItemName">Item Name</string>
    <string name="txt_des">Description</string>
    <string name="txt_qty">Quantity</string>
    <string name="txt_no_items">Number of items</string>
    <string name="txt_tot">Total</string>
    <string name="tot_Value">Value of Total</string>
    <string name="txt_flow2"><b> Rose flower boquet 2500Rs</b></string>
    <string name="shop_item">Item Name</string>
    <string name="shop_des">Description</string>
    <string name="btn_editshop">Edit</string>
    <string name="txt_shop_price">Price</string>
    <string name="btn_shop_delete">Delete</string>
    <string name="shop_suotot">Sub Total</string>
    <string name="btn_con_shop">Continue Shopping</string>
    <string name="btn_shopPlaceOrder">Place Order</string>
    <string name="register">Register to grab your lovely gifts</string>
    <string name="name_logtxt">Full Name</string>
    <string name="txtreg_phone">Phone Number</string>
    <string name="txtreg_email">Email</string>
    <string name="txt_pswd">Enter a Password</string>
    <string name="txt_conpass">Confirm Password</string>
    <string name="txt_create">Create Account</string>
    <string name="txt_pass">Password</string>
    <string name="goitem"> Categories</string>

    <string name="delivery_request_form">Delivery Request Form</string>
    <string name="receiver_full_name">Receiver full name:</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="mobile_number1">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="delivery_address1"> Address1</string>
    <string name="update">UPDATE</string>
    <string name="edit_delivery_details">EDIT DELIVERY DETAILS</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="receiver_full_name1">Receiver Full Name</string>
    <string name="status_delivered">Status: Delivered</string>
    <string name="receiver_mobile">Receiver Mobile</string>
    <string name="sender_name">Sender Name:</string>
    <string name="order_no">Order No:</string>
    <string name="receiver_name">Receiver Name:</string>
    <string name="button1">Button</string>
    <string name="address1">Address:</string>
    <string name="delete">Delete</string>
    <string name="item_01">Item 01</string>
    <string name="price">Price</string>
    <string name="name">RECEIVER NAME</string>
    <string name="pendingOrders">Order No:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="txt_logout">Log Out</string>
    <string name="txt_eg">Profile</string>
    <string name="txt_egname">John Doe</string>
    <string name="txt_egmail">john@gmail.com</string>
    <string name="txt_egadddr">No 155, Galle Road,Colombo</string>
    <string name="txt_personal">Personal</string>
    <string name="txt_manage">Manage</string>
    <string name="txt_it">Items</string>
    <string name="txt_total">Total</string>
    <string name="txt_deliv">Delivery</string>
    <string name="txt_dis">Discount</string>
    <string name="txt_amount">Amount</string>
    <string name="txt_num1">Rs. 5000</string>
    <string name="txt_num2">Rs. 1000</string>
    <string name="txt_num3">Rs. 500</string>
    <string name="txt_numamount">Rs. 5500</string>
    <string name="txt_btnpayc">Go for Payment</string>
    <string name="txt_card">Select Card</string>
    <string name="txt_debit">Debit Card</string>
    <string name="txt_credit">Credit Card</string>
    <string name="txt_bank">Enter bank</string>
    <string name="txt_cnum">Enter Card Number</string>
    <string name="txt_cvv">Enter CVV</string>
    <string name="txt_exp">Enter Expiry Details</string>
    <string name="txt_mm">MM</string>
    <string name="txt_dd">DD</string>
    <string name="txt_home">Home</string>
    <string name="txt_cart">Shopping Cart</string>
    <string name="txt_od">My orders</string>
    <string name="txt_confirm">Confirm</string>
    <string name="txt_code">Discount code</string>
    <string name="txt_pay">Payment</string>
    <string name="txt_redeem">Get</string>
    <string name="txt_mng">Manage</string>
    <string name="txt_msges">Messages and Notifications</string>
    <string name="txt_paymsg">Payment Successful. Thank You for the order! It will be delivered soon</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_phone">Phone No</string>
    <string name="txt_pwd">Password</string>
    <string name="txt_ClearHistory">Clear History</string>
    <string name="txt_deleteAcc">Delete Account</string>
    <string name="txt_not">Send Promotions</string>
    <string name="txt_confdel">You are about to delete your account</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_confm">Confirm</string>
    <string name="txt_Orderno1">Order Number: 12346</string>
    <string name="txt_Orderno1date">Date</string>
    <string name="txt_Orderno2">Order Number: 12456</string>
    <string name="txt_Orderno2date">Date: 22/06/2020</string>
    <string name="txt_OrderDel">Delivered</string>
    <string name="txt_profile">My Profile</string>
    <string name="txt_shopcart">Shopping cart</string>
    <string name="txt_morder">My Orders</string>
    <string name="txt_msgs">Messages and notifications</string>
    <string name="txt_topic">New imported Chocolates Promo</string>
    <string name="txt_text">Enjoy best chocolates at the best price</string>
    <string name="rfname">Receiver: </string>

    <string name="add_item">Add Item</string>
    <string name="re_stock_item">Re-Stock Item</string>
    <string name="view_stock">View Stock</string>
    <string name="stock_details">Stock Details</string>
    <string name="re_stock_items">RE-STOCK ITEMS</string>
    <string name="quantity">Quantity:</string>
    <string name="pprice">Price:</string>
    <string name="add">ADD</string>
    <string name="item_code">Item Code:</string>
    <string name="item_code_chocolate_cake">Item Code :</string>
    <string name="price_rs_800">Price : </string>
    <string name="weight_1kg">Weight : </string>
    <string name="quantity_10">Quantity : </string>
    <string name="newPhone">Enter New Phone Number</string>
    <string name="curPass">Current Password</string>
    <string name="npass">New Password</string>
    <string name="cnPass">Confirm New Password</string>
    <string name="address">Set Address</string>
    <string name="updetails">Change Details</string>
    <string name="rs">"Rs "</string>
    <string name="txt_hname">Enter Name</string>
    <string name="txt_yy">YYYY</string>

    <string-array name="items">

        <item>Cake</item>
        <item>Chocolate</item>
        <item>flowers</item>
        <item>Soft Toys</item>
    </string-array>

</resources>